--- a/resources/[strin]/strin_backup/package.json
+++ b/resources/[strin]/strin_backup/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@citizenfx/server": "^2.0.6643-1",
     "cron": "^2.4.0",
     "dayjs": "^1.11.9",
     "form-data": "^4.0.0",
